--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,16 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-table": "^8.15.3",
+    "@types/react-simple-maps": "^3.0.4",
+    "@types/react-tooltip": "^4.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^5.26.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
