--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@types/react-tooltip": "^4.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "lucide": "^0.378.0",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "react": "^18",
