--- a/backend/redex_back/src/main/resources/application.properties
+++ b/backend/redex_back/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false 
 spring.jpa.hibernate.ddl-auto=update
 
 spring.h2.console.enabled=true
