--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@shadcn/ui": "^0.0.4",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-table": "^8.15.3",
     "@types/react-simple-maps": "^3.0.4",
     "@types/react-tooltip": "^4.2.4",
@@ -44,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sockjs-client": "^1.5.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
