--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 backend/redex_back/log/app.log
+backend/redex_back/finalExpNumResults.txt
+backend/redex_back/initial.txt
+backend/redex_back/ocupacionAeropuertos.txt
+backend/redex_back/ocupacionVuelos.txt
+backend/redex_back/rutasFinal.txt
