--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ backend/redex_back/initial.txt
 backend/redex_back/ocupacionAeropuertos.txt
 backend/redex_back/ocupacionVuelos.txt
 backend/redex_back/rutasFinal.txt
+backend/redex_back/finalExpNumResults.txt
+backend/redex_back/initial.txt
+backend/redex_back/ocupacionAeropuertos.txt
+backend/redex_back/ocupacionVuelos.txt
+backend/redex_back/rutasFinal.txt
