--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,12 +30,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "leaflet": "^1.9.4",
     "lucide": "^0.378.0",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-simple-maps": "^3.0.0",
     "react-tooltip": "^5.26.3",
     "sonner": "^1.4.41",
@@ -43,6 +45,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
