--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ backend/redex_back/initial.txt
 backend/redex_back/ocupacionAeropuertos.txt
 backend/redex_back/ocupacionVuelos.txt
 backend/redex_back/rutasFinal.txt
+backend/redex_back/rutasFinal.txt
+backend/redex_back/finalExpNumResults.txt
