--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ backend/redex_back/ocupacionVuelos.txt
 backend/redex_back/rutasFinal.txt
 backend/redex_back/rutasFinal.txt
 backend/redex_back/finalExpNumResults.txt
+backend/redex_back/logs/application.log
