--- a/backend/redex_back/src/main/resources/application.properties
+++ b/backend/redex_back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=redex_back
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.application.name=redex_back
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
 
 spring.jpa.show-sql=false 
 spring.jpa.hibernate.ddl-auto=update
@@ -10,10 +10,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 # Datasource
-#spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
 
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
