--- a/backend/redex_back/src/main/resources/application.properties
+++ b/backend/redex_back/src/main/resources/application.properties
@@ -6,6 +6,9 @@
 spring.jpa.show-sql=false 
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+#spring.jackson.time-zone=UTC
+
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
@@ -17,3 +20,5 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.sql.init.mode=always
+
+#logging.level.org.springframework.boot.autoconfigure=DEBUG
