--- a/backend/redex_back/src/main/resources/application.properties
+++ b/backend/redex_back/src/main/resources/application.properties
@@ -9,9 +9,17 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 #spring.jackson.time-zone=UTC
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=redex.inf226.981.3c@gmail.com
+spring.mail.password=nzztmgrqotpmgxan
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
 # Datasource
 #spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
 #spring.datasource.username=sa
