cambio pom por logging

--- a/backend/redex_back/src/main/resources/application.properties
+++ b/backend/redex_back/src/main/resources/application.properties
@@ -17,8 +17,9 @@ spring.mail.password=nzztmgrqotpmgxan
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+#logging.level.org.springframework.boot.autoconfigure=DEBUG
 
-logging.level.org.springframework.boot.context.properties.bind=DEBUG
+#logging.level.org.springframework.boot.context.properties.bind=DEBUG
 
 
 # Datasource
@@ -30,4 +31,4 @@ logging.level.org.springframework.boot.context.properties.bind=DEBUG
 
 #spring.sql.init.mode=always
 
-#logging.level.org.springframework.boot.autoconfigure=DEBUG
+
