--- a/backend/redex_back/src/main/resources/application.properties
+++ b/backend/redex_back/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=redex_back
 
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.driver-class-name=org.h2.Driver
+
+spring.jpa.defer-datasource-initialization=true
+
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
