--- a/backend/redex_back/src/main/resources/application.properties
+++ b/backend/redex_back/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.defer-datasource-initialization=true
 
+jpa.properties.h2.hibernate.hbm2ddl.auto=create-drop
+
+spring.profiles.active=scheduler,h2,shiro
+
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
