tracking de errores paquete service

--- a/backend/redex_back/src/main/resources/application.properties
+++ b/backend/redex_back/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.defer-datasource-initialization=true
 
 jpa.properties.h2.hibernate.hbm2ddl.auto=create-drop
 
+
 spring.profiles.active=scheduler,h2,shiro
 
 spring.jpa.show-sql=false
@@ -36,8 +37,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.datasource.username=sa
 #spring.datasource.password=
 #spring.datasource.driver-class-name=org.h2.Driver
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
 
 
