--- a/backend/redex_back/src/main/resources/application.properties
+++ b/backend/redex_back/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=redex_back
 
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -33,7 +33,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 # Datasource
-#spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
+spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
 #spring.datasource.username=sa
 #spring.datasource.password=
 #spring.datasource.driver-class-name=org.h2.Driver
