--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -32,6 +35,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.3",
+    "framer-motion": "^11.2.12",
     "leaflet": "^1.9.4",
     "leaflet-rotatedmarker": "^0.2.0",
     "lucide": "^0.378.0",
