--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.2.12",
